Add V2 endpoints, fixed endpoints to return correct object